build/tmp/compileFrcUserProgramReleaseExecutableFrcUserProgramCpp/output.txt
See file:///C:/Users/user/Documents/GitHub/2022RapidReact/build/tmp/compileFrcUserProgramReleaseExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramReleaseExecutableFrcUserProgramCpp.
compiling AutonSelector.cpp successful.

compiling CyclePrimitives.cpp successful.

compiling FieldDefn.cpp successful.

compiling FieldMeasurement.cpp successful.

compiling PrimitiveFactory.cpp successful.

compiling PrimitiveParams.cpp successful.

compiling PrimitiveParser.cpp successful.

compiling DoNothing.cpp successful.

compiling DriveDistance.cpp successful.

compiling DrivePath.cpp successful.

compiling DriveTime.cpp successful.

compiling DriveToTarget.cpp successful.

compiling DriveToWall.cpp successful.

compiling HoldPosition.cpp successful.

compiling ResetPosition.cpp successful.

compiling SuperDrive.cpp successful.

compiling TurnAngle.cpp successful.

compiling ControlData.cpp successful.

compiling MechanismTargetData.cpp successful.

compiling AnalogAxis.cpp successful.

compiling CubedProfile.cpp successful.

compiling DeadbandValue.cpp successful.

compiling FlippedAxis.cpp successful.

compiling LinearProfile.cpp successful.

compiling NoDeadbandValue.cpp successful.

compiling PiecewiseLinearProfile.cpp successful.

compiling ScaledAxis.cpp successful.

compiling ScaledDeadbandValue.cpp successful.

compiling SquaredProfile.cpp successful.

compiling AnalogButton.cpp successful.

compiling ButtonDecorator.cpp successful.

compiling DebouncedButton.cpp successful.

compiling DigitalButton.cpp successful.

compiling POVButton.cpp successful.

compiling ToggleButton.cpp successful.

compiling DragonGamepad.cpp successful.

compiling DragonXBox.cpp successful.

compiling FunctionMap.cpp successful.

compiling TeleopControl.cpp successful.

compiling DragonDigitalInput.cpp successful.

compiling DragonFalcon.cpp successful.

compiling DragonLimelight.cpp successful.

compiling DragonPDP.cpp successful.

compiling DragonPigeon.cpp successful.

compiling DragonServo.cpp successful.

compiling DragonSolenoid.cpp successful.

compiling DragonTalon.cpp successful.

compiling DragonVision.cpp successful.

compiling DigitalInputFactory.cpp successful.

compiling DragonMotorControllerFactory.cpp successful.

compiling DragonServoFactory.cpp successful.

compiling LimelightFactory.cpp successful.

compiling PDPFactory.cpp successful.

compiling PigeonFactory.cpp successful.

compiling DigitalInputUsage.cpp successful.

compiling MotorControllerUsage.cpp successful.

compiling ServoUsage.cpp successful.

compiling BallTransferState.cpp failed.
C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp\states\BallTransfer\BallTransferState.cpp: In constructor 'BallTransferState::BallTransferState(ControlData*, ControlData*, double, double)':
C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp\states\BallTransfer\BallTransferState.cpp:21:132: error: no matching function for call to 'Mech2MotorState::Mech2MotorState(BallTransfer*, ControlData*&, ControlData*&, double&, double&)'
 ) : Mech2MotorState( MechanismFactory::GetMechanismFactory()->GetBallTransfer(), control, control2, primaryTarget, secondaryTarget )
                                                                                                                                    ^
In file included from C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp/states/balltransfer/BallTransferState.h:3:0,
                 from C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp\states\BallTransfer\BallTransferState.cpp:7:
C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp/states/Mech2MotorState.h:28:9: note: candidate: Mech2MotorState::Mech2MotorState(IMech2IndMotors*, ControlData*, ControlData*, double, double)
         Mech2MotorState
         ^~~~~~~~~~~~~~~
C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp/states/Mech2MotorState.h:28:9: note:   no known conversion for argument 1 from 'BallTransfer*' to 'IMech2IndMotors*'
C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp/states/Mech2MotorState.h:24:7: note: candidate: constexpr Mech2MotorState::Mech2MotorState(const Mech2MotorState&)
 class Mech2MotorState : public IState
       ^~~~~~~~~~~~~~~
C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp/states/Mech2MotorState.h:24:7: note:   candidate expects 1 argument, 5 provided

compiling SolenoidUsage.cpp successful.

compiling Robot.cpp successful.

compiling Mech2MotorState.cpp successful.

compiling MechSolenoidState.cpp successful.

compiling StateMgr.cpp failed.
C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp\states\StateMgr.cpp: In member function 'void StateMgr::Init(IMech*, const std::map<std::__cxx11::basic_string<char>, StateStruc>&)':
C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp\states\StateMgr.cpp:86:78: error: no matching function for call to 'BallTransferState::BallTransferState(ControlData*&, double&)'
                         thisState = new BallTransferState(controlData, target);
                                                                              ^
In file included from C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp\states\StateMgr.cpp:34:0:
C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp/states/BallTransfer/BallTransferState.h:13:9: note: candidate: BallTransferState::BallTransferState(ControlData*, ControlData*, double, double)
         BallTransferState
         ^~~~~~~~~~~~~~~~~
C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp/states/BallTransfer/BallTransferState.h:13:9: note:   candidate expects 4 arguments, 2 provided
C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp/states/BallTransfer/BallTransferState.h:8:7: note: candidate: constexpr BallTransferState::BallTransferState(const BallTransferState&)
 class BallTransferState : public Mech2MotorState
       ^~~~~~~~~~~~~~~~~
C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp/states/BallTransfer/BallTransferState.h:8:7: note:   candidate expects 1 argument, 2 provided

compiling BallTransfer.cpp successful.

compiling Mech.cpp successful.

compiling SwerveDrive.cpp successful.

compiling Mech1IndMotor.cpp successful.

compiling Mech1Servo.cpp successful.

compiling Mech2IndMotors.cpp successful.

compiling Mech1Solenoid.cpp successful.

compiling MechanismFactory.cpp successful.

compiling Mech1MotorState.cpp successful.

compiling ChassisFactory.cpp successful.

compiling EtherDirtySwerve.cpp successful.

compiling EtherFieldSwerve.cpp successful.

compiling WPIDirtySwerve.cpp successful.

compiling AngleUtils.cpp successful.

compiling HardwareIDValidation.cpp successful.

compiling Logger.cpp successful.

compiling UsageValidation.cpp successful.

compiling CameraDefn.cpp successful.

compiling WPIFieldSwerve.cpp successful.

compiling CanCoderDefn.cpp successful.

compiling SwerveModule.cpp successful.

compiling DigitalInputDefn.cpp successful.

compiling SwerveChassis.cpp successful.

compiling LimelightDefn.cpp successful.

compiling MotorDefn.cpp successful.
C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp\xmlhw\MotorDefn.cpp: In member function 'std::shared_ptr<IDragonMotorController> MotorDefn::ParseXML(pugi::xml_node)':
C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp\xmlhw\MotorDefn.cpp:68:9: warning: variable 'continuousCurrentLimit' set but not used [-Wunused-but-set-variable]
     int continuousCurrentLimit = 0;
         ^~~~~~~~~~~~~~~~~~~~~~

compiling MechanismDefn.cpp successful.

compiling PCMDefn.cpp successful.

compiling PigeonDefn.cpp successful.

compiling PDPDefn.cpp successful.

compiling ServoDefn.cpp successful.

compiling RobotDefn.cpp successful.

compiling SolenoidDefn.cpp successful.

compiling ThroughBoreEncoderDefn.cpp successful.

compiling ControlDataDefn.cpp successful.

compiling MechanismTargetDefn.cpp successful.

compiling StateDataDefn.cpp successful.

compiling ChassisDefn.cpp successful.

compiling BallTransferStateMgr.cpp successful.

compiling pugixml.cpp successful.

compiling SwerveModuleDefn.cpp successful.

Finished compileFrcUserProgramReleaseExecutableFrcUserProgramCpp, see full log file:///C:/Users/user/Documents/GitHub/2022RapidReact/build/tmp/compileFrcUserProgramReleaseExecutableFrcUserProgramCpp/output.txt.
